# arasan-chess

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md
arasanlib/: Makefile.win  arasan.rc  arasanx.cpp  arasanx.hpp  attacks.cpp  attacks.h  bhash.cpp  bitbase.cpp  bitprobe.cpp  bitprobe.h  board.h  boardio.cpp  bookdefs.h  bookwrit.h  calctime.cpp  calctime.h  chess.cpp  chess.h  chessio.cpp  chessio.h  constant.h  ecoinfo.cpp  ecoinfo.h  epdrec.cpp  globals.cpp  globals.h  legal.cpp  legal.h  log.h  movearr.h  movegen.cpp  movegen.h  params.cpp  params.h  scoring.cpp  scoring.h  searchc.cpp  searchc.h  see.cpp  syzygy.cpp  (+4 more)
arasanlib.xcodeproj/: project.pbxproj
arasanlib.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
arasanlib.xcodeproj/project.xcworkspace/xcuserdata/vjuneja.xcuserdatad/: UserInterfaceState.xcuserstate
arasanlib.xcodeproj/xcuserdata/vjuneja.xcuserdatad/xcschemes/: xcschememanagement.plist
arasanlib/util/: makebook.cpp  makeeco.cpp  pgnselect.cpp
book/: basic.bk  basic.pgn  eco
cli/: Arasan.h  Arasan.mm  cli-Bridging-Header.h  main.swift
doc/: BUILD  BUILD.md  CHANGES  INSTALL  README  TODO  license.txt  programr.html  programr.txt  style.css  style_pg.css  syzygy-license.txt
gui/: EngineCo.cpp  HyperlinkButton.cpp  HyperlinkButton.h  MainFrm.cpp  Selectga.cpp  Selectga.h  ShowGame.cpp  aboutdlg.cpp  aboutdlg.h  apprdlg.cpp  apprdlg.h  arasan.cpp  arasan.h  arasan.props  clock.cpp  clock.h  colorbut.cpp  colorbut.h  colordlg.cpp  colordlg.h  disphint.cpp  disphint.h  display.cpp  display.h  drawutil.cpp  drawutil.h  engineco.h  gui.rc  gui.sln  gui.vcxproj  guiDoc.cpp  guiDoc.h  guiView.cpp  guiView.h  guiopts.cpp  guiopts.h  mainfrm.h  prefdlg.cpp  prefdlg.h  promotio.cpp  (+11 more)
gui/help/: NewAliases.h  NewMap.h  arasan.chm  arasan.hhc  arasan.hhk  arasan.hhp  arasan.hlp  csAlias.h
gui/help/html/: d162k0.htm  d162k1.htm  d162k2.htm  d162k3.htm  d162k4.htm  d162k5.htm  d162k6.htm  d162t1.htm  d162t2.htm  d162t3.htm  d162t4.htm  d162t5.htm  d162t6.htm  d162t7.htm  d162t8.htm  d162t9.htm  local.css
gui/install/: README.TXT  arasan.iss  arasan64.iss
gui/res/: GUI.RC2
network/: arasanv4.rs  arasanv5.rs  arasanv8.rs
prj/: arasan.props  arasan_tune.props  prj-VC2005.sln  prj.sln  prj.vcproj  prj.vcxproj
src/: .clang-format  CLAUDE.md  CMakeLists.txt  Makefile  Makefile.icl  Makefile.win  arasan.rc  arasanx.cpp  arasset.h  arasvec.h  attacke.cpp  attacke.h  attacks.cpp  attacks.h  bench.cpp  bench.h  bhash.cpp  bhash.h  bitbase.cpp  bitboard.cpp  bitboard.h  bitprobe.cpp  bitutil.cpp  bitutil.h  board.cpp  board.h  boardio.cpp  boardio.h  book.cpp  book.h  bookdefs.h  bookentr.cpp  bookentr.h  bookinfo.h  bookread.cpp  bookread.h  bookutil.cpp  bookutil.h  bookutll.cpp  bookwrit.cpp  (+112 more)
src/nnue/: LICENSE  README.md  accum.h  accumv2.h  evaluate.cpp  network.h  nndefs.h  nnparams.h  nnue.h  simd.h  simddefs.h  util.h
src/nnue/features/: arasanv3.h  halfkav2hm.h
src/nnue/layers/: crelu.h  creluandlinear.h  linear.h  pairwisemult.h  sparselinear.h  sqrcrelu.h  sqrcreluandlinear.h  typed.h
src/syzygy/: tbconfig.h  tbcore.c  tbcore.h  tbprobe.c  tbprobe.h
src/util/: binformat.cpp  binformat.h  blundercheck.cpp  checkbin.cpp  convertbin.cpp  ecocoder.cpp  makebook.cpp  makeeco.cpp  pgnselect.cpp  playchess.cpp  post_process_nn.cpp  selfplay.cpp  sortpgn.cpp
test/: rating.txt
tests/: RESULTS  arasan16.epd  arasan17.epd  arasan18.epd  arasan19.epd  arasan19a.epd  arasan20.epd  arasan2023.epd  arasan2024.epd  arasan21.epd  bt2630.epd  ecmgcp.epd  eet.epd  eet.txt  gauntlet.pl  iq4.epd  lapuce2.doc  lapuce2.epd  pet.epd  prof  prof.epd  rating-5+1-4CPU.txt  rating-blitz.txt  rating.txt  tests  tests.pl  wac.epd  wacnew.epd
tools/: README  analyze.py  fetch_games.py  label_positions.py  machines.json  match.py  match_status.py  monitor.py  playchess.py  sprt  stop  update_network.sh  update_version.sh
